# ai-invention-de87a0-welfare-state-capacity-as-a-conditioning

./: README.md
paper_latex/: references.bib
paper_latex/workspace/: .sdk_openhands_agent_struct_out.json  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references_input.json
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb
round-1/dataset-1/src/: .sdk_openhands_agent_struct_out.json  data.py  data_out.json  export_data.py  mini_data_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  literature_review_findings.md  research_out.json  research_report.md
round-1/research-2/: README.md
round-1/research-2/src/: .aii_cost_ledger.jsonl  .sdk_openhands_agent_struct_out.json  research_out.json  research_report.md
round-2/dataset-1/: README.md
round-2/dataset-1/demo/: data_code_demo.ipynb  mini_demo_data.json
round-2/dataset-1/src/: .aii_cost_ledger.jsonl  data.py  dataset_summary.json  full_data_out.json  merge_datasets.py  preview_data_out.json  pyproject.toml  sdk_openhands_agent_struct_out.json  sdk_opensand_agent_struct_out.json
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .sdk_openhands_agent_struct_out.json  README.md  fix_predictions.py  full_method_out.json  method.py  mini_method_out.json  preview_data_out.json  preview_method_out.json  pyproject.toml  specification_curve_results.csv
round-2/research-1/: README.md
(+4 files in other folders)
