[project]
name = "welfare-democracy-panel-dataset"
version = "1.0.0"
description = "Panel dataset for welfare state capacity and democratic resilience analysis (1990-2023)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "requests==2.32.3",
    "pyyaml==6.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
