[project]
name = "inequality-democracy-pilot-methodology"
version = "0.1.0"
description = "Pilot methodology demonstration: System GMM, IV, and mediation analysis for inequality-democracy research"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.4.6",
    "pandas==3.0.3",
    "scipy==1.17.1",
    "statsmodels==0.14.6",
    "linearmodels==7.0",
    "matplotlib==3.11.0",
    "seaborn==0.13.2",
    "loguru==0.7.3",
    "tqdm==4.68.2",
    "joblib==1.5.3",
    "scikit-learn==1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["method.py"]
